News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN</label>
    <type>Text</type>
</CustomField>