News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>R00N60000001PRP8EAO</relationshipName>
    <type>Lookup</type>
</CustomField>