News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Goals__c.field-meta.xml
<CustomField>
    <fullName>Account_Goals__c</fullName>
    <label>Account Goals</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>