News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Sales_Growth__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Growth__c</fullName>
    <formula>IF ( Last_Revenue_Goal_Total__c = 0 , 0, ( Plan_Revenue_Goal_Total__c ) / Last_Revenue_Goal_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>