News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Agreements/ Contracts/ Internal Rate Agreements</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Acct Plans</relationshipLabel>
    <relationshipName>Acct_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>