News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <formula>Agreement__r.End_Date__c</formula>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>