News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <formula>Agreement__r.Start_Date__c</formula>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>