News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <formula>TEXT( Agreement__r.Status__c)</formula>
    <label>Agreement Status</label>
    <type>Text</type>
</CustomField>