News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Customer_Overview__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overview__c</fullName>
    <inlineHelpText>Business Overview of client.</inlineHelpText>
    <label>Customer Overview</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>