News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Key_Business_Problems__c.field-meta.xml
<CustomField>
    <fullName>Key_Business_Problems__c</fullName>
    <label>Key Business Problems</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>