News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Last_Revenue_Goal_Digital__c.field-meta.xml
<CustomField>
    <fullName>Last_Revenue_Goal_Digital__c</fullName>
    <label>Last Revenue Goal Digital</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>