News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Last_Revenue_Goal_Press__c.field-meta.xml
<CustomField>
    <fullName>Last_Revenue_Goal_Press__c</fullName>
    <inlineHelpText>Last Period&#39;s (Contractual dates or Fiscal dates) revenue goals</inlineHelpText>
    <label>Last Revenue Goal Press</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>