News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Last_Revenue_Goal_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_Revenue_Goal_Total__c</fullName>
    <formula>Last_Revenue_Goal_Digital__c 
+
 Last_Revenue_Goal_Press__c</formula>
    <label>Last Revenue Goal Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>