News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Specific actions I will take for this Customer (SMART goals)</inlineHelpText>
    <label>Next Steps</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>