News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <type>TextArea</type>
</CustomField>