News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Plan_Revenue_Goal_Press__c.field-meta.xml
<CustomField>
    <fullName>Plan_Revenue_Goal_Press__c</fullName>
    <label>Plan Revenue Goal Press</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>