News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Plan_Revenue_Goal_Total__c.field-meta.xml
<CustomField>
    <fullName>Plan_Revenue_Goal_Total__c</fullName>
    <formula>Plan_Revenue_Goal_Digital__c + Plan_Revenue_Goal_Press__c</formula>
    <label>Plan Revenue Goal Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>