News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Planning_Year__c.field-meta.xml
<CustomField>
    <fullName>Planning_Year__c</fullName>
    <label>Planning Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY2011</fullName>
            </value>
            <value>
                <fullName>FY2012</fullName>
            </value>
            <value>
                <fullName>FY2013</fullName>
            </value>
            <value>
                <fullName>FY2014</fullName>
            </value>
            <value>
                <fullName>FY2015</fullName>
            </value>
            <value>
                <fullName>FY2016</fullName>
            </value>
            <value>
                <fullName>FY2017</fullName>
                <default>true</default>
                <label>FY2017</label>
            </value>
            <value>
                <fullName>FY2018</fullName>
            </value>
            <value>
                <fullName>FY2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>