News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Potential_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Potential_Barriers__c</fullName>
    <inlineHelpText>SWOT Analysis: Threats</inlineHelpText>
    <label>Potential Barriers</label>
    <type>TextArea</type>
</CustomField>