News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Strengths_to_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Strengths_to_Leverage__c</fullName>
    <label>Strengths to Leverage</label>
    <type>TextArea</type>
</CustomField>