News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <type>TextArea</type>
</CustomField>