News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/Business_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Business_Account_Plan</fullName>
    <active>true</active>
    <description>Account Plans for current business accounts</description>
    <label>Business Account Plan</label>
</RecordType>