News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/Prospecting_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Prospecting_Account_Plan</fullName>
    <active>true</active>
    <description>Account Plans for prospecting accounts that are not yet business accounts</description>
    <label>Prospecting Account Plan</label>
</RecordType>