News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/AUS_Category_Team_account_plans1.listView-meta.xml
<ListView>
    <fullName>AUS_Category_Team_account_plans1</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7) AND 8</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Planning_Year__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>IAbel</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>PMcIntyre</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>KBurke</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>APretrovski</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>DChung</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>KJoyce</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>TMarron</value>
    </filters>
    <filters>
        <field>Planning_Year__c</field>
        <operation>equals</operation>
        <value>FY2015</value>
    </filters>
    <label>PST Portfolio Account Plans</label>
    <sharedTo/>
</ListView>