News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/Marion_s_Team_ALL.listView-meta.xml
<ListView>
    <fullName>Marion_s_Team_ALL</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>mpyers,TAllan,mwill</value>
    </filters>
    <label>Trudy&#39;s Team (ALL)</label>
    <sharedTo>
        <roleAndSubordinates>QLD_NQN_General_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>