News UAT/force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/My_Acct_Plans2.listView-meta.xml
<ListView>
    <fullName>My_Acct_Plans2</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Planning_Year__c</columns>
    <columns>Plan_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Acct Plans</label>
</ListView>